--- a/Portfolio1.1.0.0/index.html
+++ b/Portfolio1.1.0.0/index.html
@@ -31,8 +31,8 @@
 
 
     <div class="container-fluid text-center sec2">
-        <h1 style="margin-top:8%;"> Skills </h1>
-        <h2 style="margin-top:2%;"> Lorem ipsum dolor sit amet consectetur </h2>
+        <h1> Skills </h1>
+        <h2> Lorem ipsum dolor sit amet consectetur </h2>
 
         <!-- first set of skills -->
         <div class="row">
@@ -89,7 +89,29 @@
             <h2> Lorem ipsum dolor sit amet consectetur </h2>
 
             <div class="row">
+                <div class="col-md-3 col-centered">
+                    <div class="thumbnail">
+                        <img src="img\portfolio\dreams-preview.jpg" alt="lights" />
+                        <h4>Lights</h4>
+                        <p>  Lorem ipsum dolor sit amet </p>
+                    </div>
+                </div>
 
+                <div class="col-md-3 col-centered">
+                    <div class="thumbnail">
+                        <img src="img\portfolio\dreams-preview.jpg" alt="lights" />
+                        <h4>golden</h4>
+                        <p>  Lorem ipsum dolor sit amet </p>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-centered">
+                    <div class="thumbnail">
+                        <img src="img\portfolio\dreams-preview.jpg" alt="lights" />
+                        <h4>escape</h4>
+                        <p>  Lorem ipsum dolor sit amet </p>
+                    </div>
+                </div>
             </div>
 
         </div>
