added the show at slide

--- a/Portfolio1.2.0.0/index.html
+++ b/Portfolio1.2.0.0/index.html
@@ -36,7 +36,7 @@
 
     <div class="container-fluid text-center sec2">
         <h1> Skills </h1>
-        <h2> Lorem ipsum dolor sit amet consectetur </h2>
+        <h2 id="#scroll-to"> Lorem ipsum dolor sit amet consectetur </h2>
 
         <!-- first set of skills -->
         <div class="row">
@@ -54,7 +54,7 @@
             </div>
 
             <div class="col-md-3 col-centered">
-                <i class="material-icons" id="test_js3">extension</i>
+                <i class="material-icons test_hide" id="test_js5">extension</i>
                 <h3> Matlab/Simulink</h3>
                 <h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h4>
             </div>
@@ -79,7 +79,7 @@
             </div>
 
             <div class="col-md-3  col-centered">
-                <img src="img/skills/roundicons.png" class="img-circle" />
+                <img src="img/skills/roundicons.png" class="img-circle test_hide"  id="test_js4"/>
                 <h3> Bla bla </h3>
                 <h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h4>
             </div>
