--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -2,10 +2,61 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, intial-scale=1" />
+    
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- end Bootstrap -->
+
+
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <!--Google icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- end google icons -->
+
+    <!-- FONT LINK -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <!-- end font link -->
+
+    <link rel="stylesheet" type="text/css" href="D:\Portfolio\Portfolio 2.0\css\style.css" />
+
+  
+    <!--Title-->
+    <title>Marco Mongelli</title>
+
+    
+
 </head>
 <body>
+
+    <!-- HEAD -->
+    <div class="container-fluid text-center head">
+        <h1>MARCO MONGELLI</h1>
+        <h2>Mechatronics Engineer</h2>
+
+        <img id="photo_profile" src="D:\Portfolio\Portfolio 2.0\img\header-photo.jpg" />
+    </div>
+    <!-- End HEAD -->
+
+
+    <!-- ABOUT -->
+    <div class="container-fluid text-center about">
+        <h2>about</h2>
+        <h3>PERSONAL DETAILS </h3>
+
+        <h4> Frase ad effetto </h4>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id placerat lectus. Aliquam erat volutpat. Morbi in urna nec magna vehicula dictum sit amet nec neque. Praesent consectetur ultrices feugiat. Donec tempus sit amet orci sit amet suscipit. Sed orci dui, mollis pharetra molestie eget, sagittis vel ex. Donec eu est euismod, dictum tellus et, ullamcorper neque. Sed at efficitur ipsum, porta congue nibh. Nunc tempus ac turpis id elementum. Sed a diam vel purus fermentum varius. Proin at magna in nulla vulputate consequat. Aliquam eget ligula mattis, egestas dui ut, pharetra justo. Nam sed felis nec felis aliquet luctus sit amet luctus mi. Maecenas tempor sem mi, et cursus nibh varius a. Aliquam id arcu at diam tincidunt malesuada.
+        </p>
+    </div>
+
+    <!-- End ABOUT -->
 
 </body>
 </html>
