head and about set up done

--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -49,7 +49,7 @@
         <h2>about</h2>
         <h3>PERSONAL DETAILS </h3>
 
-        <h4> Frase ad effetto </h4>
+        <h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit </h4>
 
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id placerat lectus. Aliquam erat volutpat. Morbi in urna nec magna vehicula dictum sit amet nec neque. Praesent consectetur ultrices feugiat. Donec tempus sit amet orci sit amet suscipit. Sed orci dui, mollis pharetra molestie eget, sagittis vel ex. Donec eu est euismod, dictum tellus et, ullamcorper neque. Sed at efficitur ipsum, porta congue nibh. Nunc tempus ac turpis id elementum. Sed a diam vel purus fermentum varius. Proin at magna in nulla vulputate consequat. Aliquam eget ligula mattis, egestas dui ut, pharetra justo. Nam sed felis nec felis aliquet luctus sit amet luctus mi. Maecenas tempor sem mi, et cursus nibh varius a. Aliquam id arcu at diam tincidunt malesuada.
