--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -20,7 +20,6 @@
 
     <!-- FONT LINK -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <!-- end font link -->
 
     <link rel="stylesheet" type="text/css" href="D:\Portfolio\Portfolio 2.0\css\style.css" />
@@ -46,17 +45,74 @@
 
     <!-- ABOUT -->
     <div class="container-fluid text-center about">
-        <h2>about</h2>
-        <h3>PERSONAL DETAILS </h3>
+        <h3>WELCOME TO MY SITE! </h3>
 
-        <h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit </h4>
+        <h4> I introduce the most creative and original ideas for my customers! </h4>
 
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id placerat lectus. Aliquam erat volutpat. Morbi in urna nec magna vehicula dictum sit amet nec neque. Praesent consectetur ultrices feugiat. Donec tempus sit amet orci sit amet suscipit. Sed orci dui, mollis pharetra molestie eget, sagittis vel ex. Donec eu est euismod, dictum tellus et, ullamcorper neque. Sed at efficitur ipsum, porta congue nibh. Nunc tempus ac turpis id elementum. Sed a diam vel purus fermentum varius. Proin at magna in nulla vulputate consequat. Aliquam eget ligula mattis, egestas dui ut, pharetra justo. Nam sed felis nec felis aliquet luctus sit amet luctus mi. Maecenas tempor sem mi, et cursus nibh varius a. Aliquam id arcu at diam tincidunt malesuada.
         </p>
     </div>
-
     <!-- End ABOUT -->
+
+
+    <!-- SKILLS -->
+    <div class="container-fluid text-center skills">
+        <h3>TECHNICAL SKILLS</h3>
+        <h4>I can say I’m quite good at</h4>
+
+        <!-- Table of skills -->
+
+        <!-- First set of skills -->
+        <div class="tab_skills">
+            <div class="row">
+                <div class="col-md-3 col-centered">
+                    <i class="material-icons">code</i>
+                    <h5> C/C++ </h5>
+                    <h6> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h6>
+                </div>
+
+                <div class="col-md-3 col-centered">
+                    <i class="material-icons">code</i>
+                    <h5> C/C++ </h5>
+                    <h6> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h6>
+                </div>
+
+                <div class="col-md-3 col-centered">
+                    <i class="material-icons">code</i>
+                    <h5> C/C++ </h5>
+                    <h6> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h6>
+                </div>
+            </div>
+            <p></p>
+            <!-- Second set of skills -->
+            <div class="row">
+                <div class="col-md-3 col-centered">
+                    <i class="material-icons">code</i>
+                    <h5> C/C++ </h5>
+                    <h6> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h6>
+                </div>
+
+                <div class="col-md-3 col-centered">
+                    <i class="material-icons">code</i>
+                    <h5> C/C++ </h5>
+                    <h6> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h6>
+                </div>
+
+                <div class="col-md-3 col-centered">
+                    <i class="material-icons">code</i>
+                    <h5> C/C++ </h5>
+                    <h6> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</h6>
+                </div>
+            </div>
+        </div>
+        <!-- End table of skills -->
+    </div>
+    <!-- End SKILLS -->
+
+
+
+
 
 </body>
 </html>
