Education timeline added

--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -111,8 +111,42 @@
     <!-- End SKILLS -->
 
 
+    <!-- EDUCATION -->
+    <div class="container-fluid text-center education_head">
+        <h3>EDUCATION</h3>
+        <h4>my background</h4>
+    </div>
+
+    <div class="education">
+        <section class="timeline">
+            <ul>
+                <li>
+                    <div>
+                        <time>2013</time> ARKASNAS - At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <time>2014</time> POLITO - Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <time>2016</time> POLITO - Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <time>2016</time> CHICAGO - In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <!-- End EDUCATION-->
 
 
-
+        <!-- java script file -->
+        <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
