--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -145,6 +145,11 @@
     </div>
     <!-- End EDUCATION-->
 
+    <!-- PORTFOLIO -->
+
+    <!-- End PORTOFLIO  -->
+
+   
 
         <!-- java script file -->
         <script src="js/script.js" type="text/javascript"></script>
