folder reference update

--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1" />
-    
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -22,13 +22,13 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!-- end font link -->
 
-    <link rel="stylesheet" type="text/css" href="D:\Portfolio\Portfolio 2.0\css\style.css" />
+    <link rel="stylesheet" type="text/css" href="css\style.css" />
 
-  
+
     <!--Title-->
     <title>Marco Mongelli</title>
 
-    
+
 
 </head>
 <body>
@@ -38,7 +38,7 @@
         <h1>MARCO MONGELLI</h1>
         <h2>Mechatronics Engineer</h2>
 
-        <img id="photo_profile" src="D:\Portfolio\Portfolio 2.0\img\header-photo.jpg" />
+        <img id="photo_profile" src="img\header-photo.jpg" />
     </div>
     <!-- End HEAD -->
 
@@ -149,7 +149,7 @@
 
     <!-- End PORTOFLIO  -->
 
-   
+
 
         <!-- java script file -->
         <script src="js/script.js" type="text/javascript"></script>
