--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -118,30 +118,43 @@
     </div>
 
     <div class="education">
-        <section class="timeline">
-            <ul>
-                <li>
-                    <div>
-                        <time>2013</time> ARKASNAS - At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <time>2014</time> POLITO - Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <time>2016</time> POLITO - Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <time>2016</time> CHICAGO - In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-                    </div>
-                </li>
-            </ul>
-        </section>
+        <!-- timelie list -->
+        <ul class="timeline">
+          <li>
+            <div class="timeline-badge"> <i class="glyphicon glyphicon-check"></i> </div>
+
+            <!-- Entire Panel text -->
+            <div class="timeline-panel">
+              <!-- Title body text -->
+              <div class="timeline-heading">  <div class="timeline-title"> Titolo.......................... </div>  </div>
+            <!-- End title body text -->
+
+              <!-- Body text -->
+              <div class="timeline-body">
+              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              </div>
+              <!-- End Body text -->
+
+            </div>
+            <!-- END panel -->
+          </li>
+
+
+        </li>
+      <li class="timeline-inverted">
+        <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          </div>
+          <div class="timeline-body">
+            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>          </div>
+        </div>
+      </li>
+
+
+
+        </ul>
     </div>
     <!-- End EDUCATION-->
 
