--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -126,7 +126,7 @@
             <!-- Entire Panel text -->
             <div class="timeline-panel">
               <!-- Title body text -->
-              <div class="timeline-heading">  <div class="timeline-title"> Titolo.......................... </div>  </div>
+              <div class="timeline-heading">  <h4 class="timeline-title"> Titolo.......................... </h4>  </div>
             <!-- End title body text -->
 
               <!-- Body text -->
