--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -120,7 +120,7 @@
     <div class="education">
         <!-- timelie list -->
         <ul class="timeline">
-          <li>
+          <li class="timeline-left">
             <div class="timeline-badge"> <i class="glyphicon glyphicon-check"></i> </div>
 
             <!-- Entire Panel text -->
@@ -164,7 +164,7 @@
 
 
 
-        <!-- java script file -->
-        <script src="js/script.js" type="text/javascript"></script>
+    <!-- java script file -->
+    <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
