--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -120,8 +120,11 @@
     <div class="education">
         <!-- timelie list -->
         <ul class="timeline">
-            <li class="timeline-left">
-                <div class="timeline-badge"> <i class="glyphicon glyphicon-check"></i> </div>
+            <li id="Left1">
+                <div class="timeline-badge">
+                 <!--  <i class="glyphicon glyphicon-check"></i>  -->
+                 <img src="img/Polito_logo.png" class="logo_uni">
+                </div>
 
                 <!-- Entire Panel text -->
                 <div class="timeline-panel">
@@ -138,8 +141,11 @@
                 <!-- END panel -->
             </li>
 
-            <li class="timeline-inverted">
-                <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+            <li class="timeline-inverted" id="Right1">
+                <div class="timeline-badge warning">
+                  <img src="img/UoA_logo.jpg" class="logo_uni">
+                    <!-- <i class="glyphicon glyphicon-check"></i> -->
+                </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
@@ -150,8 +156,11 @@
                 </div>
             </li>
 
-            <li class="timeline-left">
-                <div class="timeline-badge"> <i class="glyphicon glyphicon-check"></i> </div>
+            <li id="Left2">
+                <div class="timeline-badge">
+                  <!-- <i class="glyphicon glyphicon-check"></i> -->
+                  <img src="img/Polito_logo.png" class="logo_uni">
+                </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">  <h4 class="timeline-title"> Titolo.......................... </h4>  </div>
                     <div class="timeline-body">
@@ -160,8 +169,11 @@
                 </div>
             </li>
 
-            <li class="timeline-inverted">
-                <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+            <li class="timeline-inverted" id="Right2">
+                <div class="timeline-badge warning">
+                  <img src="img/UIC_logo.jpg" class="logo_uni">
+                    <!-- <i class="glyphicon glyphicon-check"></i> -->
+                </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
