--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -187,11 +187,23 @@
 
                 </ul>
             </div>
-
-
             <!-- End EDUCATION-->
+
+
+
             <!-- PORTFOLIO -->
+            <div class="container-fluid text-center portfolio">
+                <h2> PORTFOLIO </h2>
+                <h3> take a look at my work! </h3>
+
+                
+
+            </div>
+
             <!-- End PORTOFLIO  -->
+
+
+
             <!-- java script file -->
             <script src="js/script.js" type="text/javascript"></script>
 </body>
