--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -171,7 +171,8 @@
 
             <li class="timeline-inverted" id="Right2">
                 <div class="timeline-badge warning">
-                  <img src="img/UIC_logo.jpg" class="logo_uni">
+                    <img src="img/UIC_logo.jpg" id="logo_uic">
+
                     <!-- <i class="glyphicon glyphicon-check"></i> -->
                 </div>
                 <div class="timeline-panel">
@@ -196,7 +197,7 @@
                 <h2> PORTFOLIO </h2>
                 <h3> take a look at my work! </h3>
 
-                
+
 
             </div>
 
