--- a/Portfolio 2.0/main.html
+++ b/Portfolio 2.0/main.html
@@ -197,13 +197,83 @@
                 <h2> PORTFOLIO </h2>
                 <h3> take a look at my work! </h3>
 
+                <div class="row">
+                    <div class="col-md-3 col-centered">
+                         <a href="pages/portfolio1.html"> <img src="img/img_lights.jpg" class="img_portfolio" alt="img_portfolio1"> </a>
+                    </div>
+
+                    <div class="col-md-3 col-centered">
+                         <img src="img/img_lights.jpg" class="img_portfolio" alt="img_portfolio1">
+                    </div>
+
+                    <div class="col-md-3 col-centered">
+                         <img src="img/img_lights.jpg" class="img_portfolio" alt="img_portfolio1">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-3 col-centered">
+                         <img src="img/img_lights.jpg" class="img_portfolio" alt="img_portfolio1">
+                    </div>
+
+                    <div class="col-md-3 col-centered">
+                         <img src="img/img_lights.jpg" class="img_portfolio" alt="img_portfolio1">
+                    </div>
+
+                    <div class="col-md-3 col-centered">
+                         <img src="img/img_lights.jpg" class="img_portfolio" alt="img_portfolio1">
+                    </div>
+                </div>
+
+            <!-- End PORTOFLIO  -->
+
+            <!-- CONTACTS -->
+
+            <div class="contacts">
+              <div class="inner contact">
+                <!-- Form Area -->
+                <div class="contact-form">
+                    <!-- Form -->
+                    <form id="contact-us" method="post" action="#">
+                        <!-- Left Inputs -->
+                        <div class="col-xs-6 wow animated slideInLeft" data-wow-delay=".5s">
+                            <!-- Name -->
+                            <input type="text" name="name" id="name" required="required" class="form" placeholder="Name" />
+                            <!-- Email -->
+                            <input type="email" name="mail" id="mail" required="required" class="form" placeholder="Email" />
+                            <!-- Subject -->
+                            <input type="text" name="subject" id="subject" required="required" class="form" placeholder="Subject" />
+                        </div><!-- End Left Inputs -->
+                        <!-- Right Inputs -->
+                        <div class="col-xs-6 wow animated slideInRight" data-wow-delay=".5s">
+                            <!-- Message -->
+                            <textarea name="message" id="message" class="form textarea"  placeholder="Message"></textarea>
+                        </div><!-- End Right Inputs -->
+                        <!-- Bottom Submit -->
+                        <div class="relative fullwidth col-xs-12">
+                            <!-- Send Button -->
+                            <button type="submit" id="submit" name="submit" class="form-btn semibold">Send Message</button>
+                        </div><!-- End Bottom Submit -->
+                        <!-- Clear -->
+                        <div class="clear"></div>
+                    </form>
+
+                    <!-- Your Mail Message -->
+                    <div class="mail-message-area">
+                        <!-- Message -->
+                        <div class="alert gray-bg mail-message not-visible-message">
+                            <strong>Thank You !</strong> Your email has been delivered.
+                        </div>
+                    </div>
+
+                </div><!-- End Contact Form Area -->
+            </div><!-- End Inner -->
+
 
 
             </div>
 
-            <!-- End PORTOFLIO  -->
-
-
+            <!-- End CONTACTS -->
 
             <!-- java script file -->
             <script src="js/script.js" type="text/javascript"></script>
